<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maxgfr.traxivitytensorflow.MainActivity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonLoadNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonNetwork" />

        <TextView
            android:id="@+id/textViewLoadNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewNetwork"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewDownstairs"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/textViewDownstairs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewUpstairs"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/textViewUpstairs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewJogging"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/textViewJogging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewSitting"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/textViewSitting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewStanding"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/textViewStanding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewWalking"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/textViewWalking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
